--- a/index.html
+++ b/index.html
@@ -11,25 +11,37 @@
         <section>
             <div class="infos">
                 <div class="info">
-                    <h3>
+                    <h4>
                         High score
                         <div id="highscore">0</div>
-                    </h3>
+                    </h4>
                 </div>
                 <div class="info">
-                    <h3>
+                    <h4>
                         Score
                         <div id="score">0</div>
-                    </h3>
+                    </h4>
                 </div>
                 <div class="info">
-                    <h3>Time
+                    <h4>Time
                         <div id="time">00-00</div>
-                    </h3>
+                    </h4>
                 </div>
             </div>
             <div class="board"></div>
         </section>
+        <div class="modal">
+            <div class="start-game">
+                <h3>Wellcome to Snake Game</h3>
+                <button class="btn btn-start">Start Game</button>
+            </div>
+             <div class="restart">
+                <h3>Lets play again</h3>
+                <button class="btn btn-restart">Restart Game</button>
+            </div>
+        </div>
+
+       
     </main>
 
 <script src="script.js"></script>
